Тяжела и неказиста жизнь народного артиста

--- a/04/index.html
+++ b/04/index.html
@@ -63,30 +63,57 @@
 
 
   <div class="flex" >
-        <div class="">
-            <a class="ss" href="#"> <i class="fa fa-home"> </i> <br>Сыль 1</a>
+        <div class="ss">
+            <a class="ssilka" href="#"> <i class="fa fa-home"> </i> <br>Сыль 1</a>
             <p> Пусть бегут неуклюже пешеходы по лужам а вода по асфальту рекой</p>
-        </div>
-          <div class="">
-            <a class="ss" href="#"> <i class="fa fa-shopping-bag"> </i> <br> Сыль 2 </a>
-            <p>  Тырьям тырьярим там тырьям. Тырьям тырьям трятрям тямм.</p>
-          </div>
-        <div class="">
-            <a class="ss" href="#"> <i class="fa fa-cogs"></i>  <br> Сыль 3</a>
-            <p> Старый друг  луше новых двух? </p>
-        </div>
-          <div class="">
-             <a class="ss" href="#"><i class="fa fa-th-list"></i> <br> Сыль 4</a>
-             <p>  Главная беда РФ - печенеги</p>
-          </div>
-        <div class="">
-            <a class="ss" href="#"> <i class=" fa fa-envelope-open"></i> <br> Сыль 5</a>
-            <p> Левая и правая две калоши парою </p>
+            <i class="lineunder"></i>
 
+        </div>
+          <div class="ss">
+            <a class="ssilka" href="#"> <i class="fa fa-shopping-bag"> </i> <br> Сыль 2 </a>
+            <p>  Тырьям тырьярим там тырьям. Тырьям тырьям трятрям тямм.</p>
+              <i class="lineunder"></i>
+          </div>
+        <div class="ss">
+            <a class="ssilka" href="#"> <i class="fa fa-cogs"></i>  <br> Сыль 3</a>
+            <p> Старый друг  луше новых двух? </p>
+              <i class="lineunder"></i>
+        </div>
+          <div class="ss">
+             <a class="ssilka" href="#"><i class="fa fa-th-list"></i> <br> Сыль 4</a>
+             <p>  Главная беда РФ - печенеги</p>
+               <i class="lineunder"></i>
+          </div>
+        <div class="ss">
+            <a class="ssilka" href="#"> <i class=" fa fa-envelope-open"></i> <br> Сыль 5</a>
+            <p> Левая и правая две калоши парою </p>
+               <i class="lineunder"></i>
         </div>
 
   </div>
 
+  <div class="Zagolovok">
+     <h2> Какой-то особо Кричащий текст о Том что наша Контора лучше Всех</h2> <br>
+     <p>  Большой и объёмный текст повествующий об амбциях проекта и почему   конечному пользователю стоит остановить свой выбор именно  на нашем проекте и принести свои кровные для дядей и тётей из нашей шараги</p>
+
+
+  </div>
+
+<div class = "pikcha" >
+   <img src="./img/telo.jpg" alt="telo">
+
+</div>
+
+<div class= "line">
+  <div>
+    
+  </div>
+  <div>
+
+  </div>
+
+
+</div>
 
 
 
