--- a/04/index.html
+++ b/04/index.html
@@ -106,10 +106,11 @@
 
 <div class= "line">
   <div>
-    
+    <span> Mishiko Inc </span> <span> Является ведущим поставщиком девелоперов в нашем регионе </span> <br>
+    <p> Не забывайте что лучшие специалисты всегда начинали с  малого </p>
   </div>
   <div>
-
+ <a href="http://google.ru">Погнали сёрфить</a>
   </div>
 
 
