--- a/04/index.html
+++ b/04/index.html
@@ -110,7 +110,7 @@
     <p> Не забывайте что лучшие специалисты всегда начинали с  малого </p>
   </div>
   <div>
- <a href="http://google.ru">Погнали сёрфить</a>
+ <a href="http://google.ru" target="_blank" >Погнали сёрфить</a>
   </div>
 
 
