Чёт допиливаем в мишкином задании

--- a/04/index.html
+++ b/04/index.html
@@ -116,7 +116,70 @@
 
 </div>
 
+ <div class="string">
+    <ul>
+      <li><a href="#">Всё</a> </li>
+      <li><a href="#">Не всё</a> </li>
+      <li><a href="#">Только что-то</a> </li>
+      <li><a href="#">Что то особенное</a> </li>
+      <li><a href="#">Только прочее</a> </li>
+    </ul>
+
+ </div>
+
+ <div class="pica">
 
 
+         <div class="">
+
+
+         <div class = "cont" > <img src="./img/1.jpg" alt=""> </div>  <i>белыйСнег</i>
+         <span> Чёт ещё дописять
+         </span>
+
+
+       </div>
+         <div class="">
+           <div class = "cont" ><img src="./img/2.jpg" alt=""> </div> <i>Серый лёд</i>
+           <span> Чёт ещё дописять
+           </span>
+         </div>
+
+         <div class="">
+           <div class = "cont" ><img src="./img/3.jpg" alt=""></div><i> желтый снег</i>
+           <span> Чёт ещё дописять
+           </span>
+         </div>
+         <div class="">
+           <div class = "cont" ><img src="./img/4.jpg" alt=""> </div><i>рыжий лёд</i>
+           <span> Чёт ещё дописять
+           </span>
+         </div>
+         <div class="">
+          <div class = "cont" > <img src="./img/5.jpg" alt=""></div><i>Жуть какая </i>
+           <span> Чёт ещё дописять
+           </span>
+         </div>
+         <div class="">
+          <div class = "cont" > <img src="./img/6.jpg" alt=""> </div><i>Несустветная</i>
+           <span> Чёт ещё дописять
+           </span>
+         </div>
+         <div class="">
+             <div class = "cont" ><img src="./img/7.jpg" alt=""> </div><i> Абракадабра</i>
+           <span> Чёт ещё дописять
+           </span>
+         </div>
+
+ </div>
+ <div class="chel">
+ <img src="img/chel.jpg" alt="chels">
+<img src="img/telefon.jpg" alt="">
+</div>
+
+
+
+
+</div>
   </body>
 </html>
