--- a/04/index.html
+++ b/04/index.html
@@ -177,9 +177,61 @@
 <img src="img/telefon.jpg" alt="">
 </div>
 
+<div class="linepic">
 
+  <ul>
+    <li>  <i class="fas fa-anchor"></i>
+          <p>777</p>
+          <span>Заметочка</span>
+          <i class="cherta" ></i>
+    </li>
+    <li>  <i class="far fa-angry"></i>
+          <p>666</p>
+          <span>Веточкаaaaa</span>
+          <i class="cherta"></i>
+    </li>
+    <li>  <i class="fab fa-android"></i>
+          <p>333</p>
+          <span>Приветочка</span>
+          <i class="cherta"></i>
+    </li>
+    <li>  <i class="fas fa-bicycle"></i>
+          <p>111</p>
+          <span>Монеточка</span>
+          <i class="cherta"></i>
+    </li>
+    <li>  <i class="fas fa-couch"></i>
+          <p>999</p>
+          <span>Конфеточка</span>
+          <i class="cherta"></i>
+    </li>
+
+  </ul>
+
+</div>
+
+<div class="Zagolovok2">
+   <h2> Ещё Одна громкая кричащая хрень по центру экрана</h2> <br>
+   <p>  Obey!Obey!Obey!Obey!Obey!Obey!Obey!Obey!Obey!</p>
 
 
 </div>
+<div class="lo">
+
+</div>
+<footer>
+<div class="levo">
+   <span> Натырено© безбожно   </span>
+   <a href="#">Туда </a>
+   <a href="#">Сюда</a>
+   <a href="#">отсюда </a>
+</div>
+<div class="pravo">
+  <a href="#"> <i class="fab fa-adn"></i></a>
+  <a href="#"><i class="fas fa-air-freshener"></i></a>
+  <a href="#"><i class="fas fa-balance-scale"></i></a>
+  <a href="#"><i class="fas fa-bug"></i></a>
+</div>
+</footer>
   </body>
 </html>
