--- a/maket/index.html
+++ b/maket/index.html
@@ -2,6 +2,9 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title></title>
@@ -10,9 +13,13 @@
     <header class="heaher">
       <div class="header_top">
           <div class="container">
-            <a href="#">+3809977766655</a>
-            <a href="#">mailplaant@gmail.com</a>
-            <a href="#"> Бесплатная консультация</a>
+            <div class="header_contacts">
+
+
+            <a  class="header_phone" href="tel:380997776655">+3809977766655</a>
+            <a class="header_email" href="#">mailplaant@gmail.com</a>
+            <a class="header_btn" href="#" > Бесплатная консультация</a>
+            </div>
           </div>
       </div>
       <div class="header_content">
